--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">---</div>
                 <div class="intro-heading">Florian Strob</div>
-                <a href="#services" class="page-scroll btn btn-xl">Portfolio???</a>
+                <!-- <a href="#services" class="page-scroll btn btn-xl">Portfolio???</a> -->
             </div>
         </div>
     </header>
