--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">---</div>
+                <div class="intro-lead-in"></div>
                 <div class="intro-heading">Florian Strob</div>
             </div>
         </div>
