tweak menu bar css

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -208,9 +208,11 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a {
     text-transform: uppercase;
     font-family: {{ site.data.template.font.primary }};
-    font-weight: 400;
+    font-weight: 500;
+    font-size: 20px;
     letter-spacing: 1px;
     color: #fff;
+    /*visibility: hidden;*/
     -webkit-transition: all ease .35s;
     -moz-transition: all ease .35s;
     transition: all ease .35s;
@@ -236,7 +238,7 @@ fieldset[disabled] .btn-xl.active {
 
 @media(min-width:768px) {
     .navbar-default {
-        padding: 25px 0;
+        padding: 10px 0;
         border: 0;
         background-color: transparent;
         -webkit-transition: padding .3s;
@@ -255,14 +257,17 @@ fieldset[disabled] .btn-xl.active {
         border-radius: 3px;
     }
 
-    .navbar-default.navbar-shrink {
-        padding: 10px 0;
+    .navbar-default {
+        padding: 0px 0;
         background-color: #222;
     }
 
     .navbar-default.navbar-shrink .navbar-brand {
         font-size: 1.5em;
     }
+    /*.navbar-nav>li>a {
+      padding: 5px 5px 5px 5px;
+    }*/
 }
 
 header {
