--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,9 @@
                     <li>
                         <a class="page-scroll" href="#about">About</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#publications">Publications</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
