Swap serif for playfair

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -441,6 +441,7 @@ section h3.section-subheading {
     position: relative;
     padding: 0;
     list-style: none;
+    font-family: {{ site.data.template.font.secondary }};
 }
 
 .timeline:before {
