--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -254,7 +254,7 @@ fieldset[disabled] .btn-xl.active {
     }
 
     .navbar-default .navbar-nav>.active>a {
-        border-radius: 3px;
+        /*border-radius: 3px;*/
     }
 
     .navbar-default {
