--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,10 @@
 
     {% include header.html %}
     {% include portfolio_grid.html %}
+    {%comment%}
     {% include about.html %}
     {% include publications_grid.html %}
+    {%endcomment%}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
