--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -4,10 +4,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Stay tuned.</h3>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
             {% for post in site.posts %}
               {% if post.site-section == "portfolio" %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -26,6 +26,6 @@
                 </div>
               {% endif %}
             {% endfor %}
-            </div>
+            </div> -->
         </div>
     </section>
