--- a/_includes/publications_grid.html
+++ b/_includes/publications_grid.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Publications</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">A selection of my latest books, articles etc.</h3>
                 </div>
             </div>
             <div class="row">
@@ -17,7 +17,7 @@
                                 <i class="fa fa-ellipsis-h fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/publications/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
+                        <img src="img/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>{{ post.title }}</h4>
