--- a/_includes/publications_grid.html
+++ b/_includes/publications_grid.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Publications</h2>
-                    <h3 class="section-subheading text-muted">A selection of my latest books, articles etc.</h3>
+                    <h3 class="section-subheading text-muted">a selection of my latest books &amp; articles</h3>
                 </div>
             </div>
             <div class="row">
