--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,5 +1,5 @@
 <!-- Portfolio Grid Section -->
-    <section id="portfolio" class="bg-light-gray">
+    <!-- <section id="portfolio" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -7,7 +7,7 @@
                     <h3 class="section-subheading text-muted">Stay tuned.</h3>
                 </div>
             </div>
-            <!-- <div class="row">
+            <div class="row">
             {% for post in site.posts %}
               {% if post.site-section == "portfolio" %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -26,6 +26,6 @@
                 </div>
               {% endif %}
             {% endfor %}
-            </div> -->
+            </div>
         </div>
-    </section>
+    </section> -->
