--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>  -->
                     <li>
-                        <a class="page-scroll" href="#ABOUT">ABOUT</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                 </ul>
             </div>
